--- a/smsproj/smsapp/templates/add_subject.html
+++ b/smsproj/smsapp/templates/add_subject.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Add Subject</title>
+    <meta charset="UTF-8">
+    <title>Add Subjects</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Custom styles to align content with the sidebar */
         body {
             margin: 0;
             padding: 0;
@@ -13,41 +13,64 @@
             margin-left: 250px; /* Same as sidebar width from navbar.html */
             padding: 20px;
         }
-        .logout-btn {
-            margin-top: 20px;
-        }
     </style>
 </head>
 <body>
     {% include 'navbar.html' %}
     <div class="main-content">
-    <h2>Add New Subject</h2>
-    <form method="post">
-        {% csrf_token %}
-        <label for="subject_name">Subject Name:</label>
-        <input type="text" id="subject_name" name="subject_name" required><br><br>
+        <h2 class="text-center">Add Subjects for {{ subcourse.name }}</h2>
+        <form method="post">
+            {% csrf_token %}
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Subject Name</th>
+                        <th>Subject Code</th>
+                        <th>Semester</th>
+                    </tr>
+                </thead>
+                <tbody id="subject-rows">
+                    <tr>
+                        <td><input type="text" name="subject_name" class="form-control" required></td>
+                        <td><input type="text" name="subject_code" class="form-control" required></td>
+                        <td>
+                            <select name="semester" class="form-control" required>
+                                <option value="" disabled selected>Select</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <button type="submit" class="btn btn-success">Submit</button>
+        </form>
+        <button class="btn btn-secondary mt-2" id="add-row">Add Another Subject</button>
+    </div>
 
-        <label for="subject_code">Subject Code:</label>
-        <input type="text" id="subject_code" name="subject_code" required><br><br>
-
-        <label for="semester">Semester:</label>
-        <select id="semester" name="semester" required>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-        </select><br><br>
-        
-        <button type="submit">Add Subject</button>
-    </form>
-
-    {% if success_message %}
-        <p style="color:green;">{{ success_message }}</p>
-    {% endif %}
-
-    {% if error_message %}
-        <p style="color:red;">{{ error_message }}</p>
-    {% endif %}
-</div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#add-row').click(function() {
+                var newRow = `
+                    <tr>
+                        <td><input type="text" name="subject_name" class="form-control" required></td>
+                        <td><input type="text" name="subject_code" class="form-control" required></td>
+                        <td>
+                            <select name="semester" class="form-control" required>
+                                <option value="" disabled selected>Select</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
+                        </td>
+                    </tr>`;
+                $('#subject-rows').append(newRow);
+            });
+        });
+    </script>
 </body>
 </html>
